fix: update docker image names to use repository owner

--- a/.github/workflows/order-api-ci-cd.yml
+++ b/.github/workflows/order-api-ci-cd.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 env:
-  IMAGE_NAME: techcommerce/order-api
+  IMAGE_NAME: ${{ github.repository_owner }}/order-api
   REGISTRY: ghcr.io
 
 jobs:
