--- a/.github/workflows/forntend-ci-cd.yml
+++ b/.github/workflows/forntend-ci-cd.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 env:
-  IMAGE_NAME: techcommerce/frontend
+  IMAGE_NAME: ${{ github.repository_owner }}/frontend
   REGISTRY: ghcr.io
 
 jobs:
